--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   },
   "homepage": "https://github.com/kara-krzystan/food-festival#readme",
   "devDependencies": {
+    "file-loader": "^6.2.0",
+    "image-webpack-loader": "^7.0.1",
     "webpack": "^5.23.0",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
+    "imagemin-gifsicle": "^7.0.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   }
